--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -1,7 +1,8 @@
 <header class="mw-header">
 	{{>Logo}}
+	{{>Sitename}}
+	{{>Search}}
 	{{>Notifications}}
 	{{>Dropdown}}{{>PersonalMenu}}
-	{{>Search}}
-	{{>Sidebar}}
-</header>
+	{{>ContentActions}}
+	{{>Sidebar}}</header>
