--- a/resources/Logo.less
+++ b/resources/Logo.less
@@ -2,24 +2,15 @@
 
 /* stylelint-disable unit-disallowed-list */
 #p-logo {
-	min-height: 70px;
-	flex-grow: 1;
-
+	margin-right: 1em; /* Adds space between logo and site name */
+	
 	h1 {
 		font-size: 1rem;
 		margin: 0;
-		border: 0;
-		padding: 0 0 0 10px;
-	}
-
-	img {
-		max-width: none;
 	}
 
 	a {
 		display: flex;
-		align-content: center;
-		height: 70px;
 		align-items: center;
 	}
 
