--- a/resources/Header.less
+++ b/resources/Header.less
@@ -1,15 +1,14 @@
 @import 'mediawiki.skin.variables.less';
 
 .mw-header {
-	background-color: @background-color-article;
-	width: 100%;
-	padding: 0 20px;
-	margin-bottom: 10px;
-	box-sizing: border-box;
-	display: flex;
-	align-items: center;
 	min-height: 50px;
-}
+	margin: 0 10px 8px;
+	padding: 1em 0 1em 5px;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	position: relative;
+	z-index: 3;
 
 	@media ( max-width: @max-width-breakpoint-tablet ) {
 		padding: 1em 8px;
