--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -3,6 +3,6 @@
 	{{>Sitename}}
 	{{>Search}}
 	{{>Notifications}}
+	{{>Dropdown}}{{>ContentActions}}
 	{{>Dropdown}}{{>PersonalMenu}}
-	{{>ContentActions}}
 </header>
