--- a/templates/Content.mustache
+++ b/templates/Content.mustache
@@ -1,7 +1,6 @@
 <main id="content" class="mw-body">
 	<header class="content__header">
-		{{>ContentHeading}}
-		{{>ContentNamespaces}}
+		{{>ContentIndicators}}
 	</header>
 	{{>ContentBody}}
 	{{#data-toc}}{{>TableOfContents}}{{/data-toc}}
