--- a/templates/Content.mustache
+++ b/templates/Content.mustache
@@ -1,6 +1,7 @@
 <main id="content" class="mw-body">
 	<header class="content__header">
 		{{>ContentIndicators}}
+		{{>ContentHeading}}
 	</header>
 	{{>ContentBody}}
 	{{#data-toc}}{{>TableOfContents}}{{/data-toc}}
