--- a/resources/common.less
+++ b/resources/common.less
@@ -12,10 +12,12 @@ body {
 	max-width: 99%;
 	margin: 0 auto;
 	font-family: @font-family;
+    background: #eaecf0;
 }
 
 main {
 	padding: 1em;
+	background: white;
 
 	& ~ nav,
 	& ~ footer {
