--- a/templates/ContentHybrid.mustache
+++ b/templates/ContentHybrid.mustache
@@ -1,16 +1,26 @@
-<div role="navigation" id="p-hybrid-actions" class="mw-portlet" aria-labelledby="p-hybrid-actions-label">
-    <h3 id="p-hybrid-actions-label">More</h3>
-    <div class="mw-portlet-body">
-        <ul>
-            {{! 1. Render data-views. The CSS will hide what is not needed. }}
-            {{#data-portlets.data-views.array-items}}
-                 <li id="{{id}}" class="{{class}}">{{#array-links}}<a {{#array-attributes}}{{key}}="{{value}}"{{/array-attributes}}>{{text}}</a>{{/array-links}}</li>
-            {{/data-portlets.data-views.array-items}}
+<nav class="custom-toolbar">
+    <ul class="toolbar-primary">
+        {{#custom-bar-visible}}
+            <li id="{{id}}" class="{{class}}">
+                {{#array-links}}
+                    <a href="{{href}}" {{#array-attributes}}{{key}}="{{value}}"{{/array-attributes}}>
+                        {{text}}
+                    </a>
+                {{/array-links}}
+            </li>
+        {{/custom-bar-visible}}
+    </ul>
 
-            {{! 2. Render all items from data-actions. }}
-            {{#data-portlets.data-actions.array-items}}
-                <li id="{{id}}" class="{{class}}">{{#array-links}}<a {{#array-attributes}}{{key}}="{{value}}"{{/array-attributes}}>{{text}}</a>{{/array-links}}</li>
-            {{/data-portlets.data-actions.array-items}}
+    <div class="toolbar-dropdown-container">
+        <button class="dropdown-trigger">More ▾</button>
+        <ul class="dropdown-menu">
+            {{#custom-bar-dropdown}}
+                <li id="{{id}}" class="{{class}}">
+                    {{#array-links}}
+                        <a href="{{href}}">{{text}}</a>
+                    {{/array-links}}
+                </li>
+            {{/custom-bar-dropdown}}
         </ul>
     </div>
-</div>
+</nav>
