--- a/resources/mediawiki.skin.variables.less
+++ b/resources/mediawiki.skin.variables.less
@@ -6,7 +6,7 @@
 @color-thumb: #170b06;
 @color-base: #100617;
 @color-gray: #522173;
-@color-gray-2: #9344c7;
+@color-gray-2: #ced4da;
 @color-link: #2e9d96;
 @color-link--active: #34b1a8;
 @color-link--visited: #31a79f;
