--- a/resources/Search.less
+++ b/resources/Search.less
@@ -12,13 +12,14 @@
 		background-color: #fff;
 		-webkit-appearance: none;
 		margin-top: 0;
-		height: 2.25em;
+		font-size: 1rem;
+		height: calc(1.5em + 0.75rem + 2px);
 		border: solid 1px @color-gray-2;
-		border-radius: 2px;
-		padding: 7px 0 7px 29px;
-		box-shadow: 0 1px 1px rgba( 0, 0, 0, 0.05 );
+		border-radius: 0.25rem;
+		padding: 0.375rem 0.75rem;
+		box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 		outline: 0;
-		background-position: left 6px center;
+		background-position: right 6px center;
 		background-repeat: no-repeat;
 		background-size: 18px;
 	}
