--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -4,4 +4,7 @@
 	{{>Search}}
 	{{>ContentEdit}}
 	{{>ContentTalk}}
+	{{>Notifications}}
+	{{>Dropdown}}{{>ContentHybrid}}
+	{{>Dropdown}}{{>PersonalMenu}}
 </header>
