--- a/templates/ContentEdit.mustache
+++ b/templates/ContentEdit.mustache
@@ -2,7 +2,7 @@
 <div id="{{id}}" class="mw-portlet ridvan-edit-button">
     <div class="mw-portlet-body">
         {{#array-links}}
-            <a href="{{href}}" title="{{text}}" class="ridvan-edit-link">
+            <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
                 {{text}}
             </a>
         {{/array-links}}
