--- a/templates/ContentHybrid.mustache
+++ b/templates/ContentHybrid.mustache
@@ -5,10 +5,16 @@
         <ul>
             {{#ridvan-content-hybrid}}
                 <li id="{{id}}" class="{{class}}">
-                    {{#array-links}}
-                        <a href="{{href}}" {{#array-attributes}}{{key}}="{{value}}"{{/array-attributes}}>
+                    {{^array-links}}
+                         <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
                             {{text}}
-                        </a>
+                         </a>
+                    {{/array-links}}
+
+                    {{#array-links}}
+                         <a {{#array-attributes}}{{key}}="{{value}}" {{/array-attributes}}>
+                            {{text}}
+                         </a>
                     {{/array-links}}
                 </li>
             {{/ridvan-content-hybrid}}
