--- a/resources/Header.less
+++ b/resources/Header.less
@@ -18,8 +18,7 @@
 
 /* --- ICON STYLES --- */
 .ridvan-edit-button,
-.ridvan-talk-button,
-.mw-checkbox-hack-button
+.ridvan-talk-button {
     display: inline-block;
     width: 24px;
     height: 24px;
@@ -48,7 +47,8 @@
 }
 
 .ridvan-edit-button a,
-.ridvan-talk-button a {
+.ridvan-talk-button a,
+.mw-checkbox-hack-button {
     display: block;
     position: absolute;
     top: 0;
