--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -2,5 +2,9 @@
 	{{>Logo}}
 	{{>Sitename}}
 	{{>Search}}
-	{{>Dropdown}}{{>PersonalMenu}}
+	{{>ContentEdit}}
+	{{>ContentTalk}}
+	{{>Dropdown}}{{>ContentHybrid}}
+	{{>Notifications}}
+	{{>PersonalMenu}}
 </header>
