--- a/resources/Header.less
+++ b/resources/Header.less
@@ -18,7 +18,8 @@
 
 /* --- ICON STYLES --- */
 .ridvan-edit-button,
-.ridvan-talk-button {
+.ridvan-talk-button,
+.mw-checkbox-hack-button {
     display: inline-block;
     width: 24px;
     height: 24px;
