--- a/resources/Header.less
+++ b/resources/Header.less
@@ -27,7 +27,7 @@
     color: transparent;
     position: relative;
     z-index: 10;
-	    
+	vertical-align: middle;	    
     background-color: @color-base; 
 
     /* Mask settings */
