--- a/resources/Sidebar.less
+++ b/resources/Sidebar.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.skin.variables.less';
 
-/* 1. SIDEBAR CONTAINER */
+/* 1. SIDEBAR CONTAINER 
 .ridvan-sidebar {
 	background-color: #f8f9fa;
 	border: 1px solid @background-color-base;
@@ -11,7 +11,7 @@
 	box-sizing: border-box;
 	overflow-wrap: break-word;
 }
-*/
+
 /* 2. THE MENU LIST */
 .ridvan-sidebar-menu {
 	width: 100%;
