--- a/resources/Sidebar.less
+++ b/resources/Sidebar.less
@@ -3,6 +3,7 @@
 /* 1. SIDEBAR CONTAINER */
 .ridvan-sidebar {
 	background-color: #f8f9fa;
+	border: 1px solid @background-color-base;
 	margin: 0em 0 1em 0;margin: 0em 0 1em 0
 	padding: 1em;
 	height: 100%;
