--- a/resources/Sidebar.less
+++ b/resources/Sidebar.less
@@ -4,6 +4,7 @@
 .ridvan-sidebar {
 	background-color: #f8f9fa;
 	border: 1px solid @background-color-base;
+	box-shadow: 0 1px 7px 1px rgba(0, 0, 0, 0.1);
 	margin: 0em 0 1em 0;margin: 0em 0 1em 0
 	padding: 1em;
 	height: 100%;
