--- a/resources/common.less
+++ b/resources/common.less
@@ -29,7 +29,7 @@ main {
 	}
 
 body {
-		background: @background-color-article;
+		background: @background-color-base;
 		color: @color-base;
 		margin: 0 auto;
 		min-height: 100vh;
