--- a/templates/Languages.mustache
+++ b/templates/Languages.mustache
@@ -1,4 +1,6 @@
-<nav class="skin-languages">
-{{#data-portlets.data-variants}}{{>Portlet}}{{/data-portlets.data-variants}}
-{{#data-portlets.data-languages}}{{>Portlet}}{{/data-portlets.data-languages}}
-</nav>
+{{#data-portlets.data-variants}}
+    {{>Portlet}}
+{{/data-portlets.data-variants}}
+{{#data-portlets.data-languages}}
+    {{>Portlet}}
+{{/data-portlets.data-languages}}
