--- a/templates/PersonalMenu.mustache
+++ b/templates/PersonalMenu.mustache
@@ -1,33 +1,1 @@
-<div id="p-personal" class="mw-portlet mw-portlet-personal">
-    <input type="checkbox" id="cb-personal" class="mw-checkbox-hack-checkbox">
-    
-    <label for="cb-personal" class="mw-checkbox-hack-button ridvan-user-button" aria-label="Personal Tools">
-        User
-    </label>
-
-    <div class="mw-portlet-body">
-        <ul>
-            {{#data-portlets.data-personal.array-items}}
-                <li id="{{id}}" class="{{class}}">
-                    {{#array-links}}
-                        <a href="{{href}}" {{#array-attributes}}{{key}}="{{value}}"{{/array-attributes}}>
-                            {{text}}
-                        </a>
-                    {{/array-links}}
-                </li>
-            {{/data-portlets.data-personal.array-items}}
-            
-            {{^data-portlets.data-personal.array-items}}
-                {{#data-portlets.data-user-menu.array-items}}
-                    <li id="{{id}}" class="{{class}}">
-                        {{#array-links}}
-                            <a href="{{href}}" {{#array-attributes}}{{key}}="{{value}}"{{/array-attributes}}>
-                                {{text}}
-                            </a>
-                        {{/array-links}}
-                    </li>
-                {{/data-portlets.data-user-menu.array-items}}
-            {{/data-portlets.data-personal.array-items}}
-        </ul>
-    </div>
-</div>
+{{#data-portlets.data-user-menu}}{{>Portlet}}{{/data-portlets.data-user-menu}}
