--- a/templates/Sidebar.mustache
+++ b/templates/Sidebar.mustache
@@ -1,7 +1,9 @@
 <aside class="ridvan-sidebar">
-    {{#data-portlets-sidebar}}
-        {{#data-portlets-first}}{{>Portlet}}{{/data-portlets-first}}
-        {{#array-portlets-rest}}{{>Portlet}}{{/array-portlets-rest}}
-    {{/data-portlets-sidebar}}
-    {{>Languages}}
+    <div class="ridvan-sidebar-menu">
+        {{#data-portlets-sidebar}}
+            {{#data-portlets-first}}{{>Portlet}}{{/data-portlets-first}}
+            {{#array-portlets-rest}}{{>Portlet}}{{/array-portlets-rest}}
+        {{/data-portlets-sidebar}}
+        {{>Languages}}
+    </div>
 </aside>
