--- a/resources/Notifications.less
+++ b/resources/Notifications.less
@@ -17,7 +17,8 @@
 	}
 
 	#pt-notifications-alert {
-		margin-right: 20px;
+		    margin-right: 4px;
+		    margin-left: 17px;
 
 		@media ( max-width: @max-width-breakpoint-tablet ) {
 			margin-right: 0;
