--- a/resources/Header.less
+++ b/resources/Header.less
@@ -38,7 +38,7 @@
     -webkit-mask-size: contain;
     mask-size: contain;
 
-    margin: 0 5px;
+    margin: 0px 4px 0px 4px;
     cursor: pointer;
 
     /* HOVER: using @color-link since @color-primary does not exist */
