--- a/resources/Sidebar.less
+++ b/resources/Sidebar.less
@@ -73,3 +73,8 @@
         text-decoration: underline;
     }
 }
+
+/* Hide "Add links" in "In other languages" */
+.after-portlet-lang {
+    display: none;
+}
