--- a/resources/Search.less
+++ b/resources/Search.less
@@ -28,3 +28,8 @@
 		display: none;
 	}
 }
+
+/* Overwrite default padding in search suggestions */
+.suggestions-result {
+    padding: 10px 30px;
+}
