--- a/templates/Content.mustache
+++ b/templates/Content.mustache
@@ -1,7 +1,7 @@
 <main id="content" class="mw-body">
 	<header class="content__header">
 		{{>ContentIndicators}}
-		{{>ContentHeading}}
+		{{{html-title-heading}}}
 	</header>
 	{{>ContentBody}}
 	{{#data-toc}}{{>TableOfContents}}{{/data-toc}}
