--- a/resources/Dropdown.less
+++ b/resources/Dropdown.less
@@ -4,7 +4,7 @@
 .mw-portlet-dropdown ~ .mw-portlet {
 	li {
 		display: block;
-		padding: 0.75em 0.875em;
+		padding: 0em 0em 0.5em 3.5em;
 	}
 
 	.mw-portlet-body {
@@ -18,6 +18,7 @@
 			box-shadow: 0 5px 17px 0 rgba( 0, 0, 0, 0.24 ), 0 0 1px @color-gray;
 			right: 0;
 			min-width: 200px;
+			padding: 10px 0px;
 		}
 	}
 
