--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -1,10 +1,13 @@
 <header class="mw-header">
-	{{>Logo}}
-	{{>Sitename}}
-	{{>Search}}
-	{{>ContentEdit}}
-	{{>ContentTalk}}
-	{{>Notifications}}
-	{{>Dropdown}}{{>ContentHybrid}}
-	{{>Dropdown}}{{>PersonalMenu}}
+    {{>Logo}}
+    {{>Sitename}}
+    {{>Search}}
+    
+    <div class="ridvan-header-tools">
+        {{>ContentEdit}}
+        {{>ContentTalk}}
+        {{>Notifications}}
+        {{>Dropdown}}{{>ContentHybrid}}
+        {{>Dropdown}}{{>PersonalMenu}}
+    </div>
 </header>
