--- a/resources/Header.less
+++ b/resources/Header.less
@@ -9,7 +9,7 @@
 	display: flex;
 	align-items: center;
 	min-height: 50px;
-
+	
 	@media ( max-width: @max-width-breakpoint-tablet ) {
         padding: 10px;
         flex-wrap: wrap; /* Allow items to flow to next line */
@@ -111,5 +111,38 @@
     
     &:hover {
         background-color: @color-link;
+    }
+}
+
+/* Default: Hide Mobile Menus, Show Desktop */
+.ridvan-mobile-menus {
+    display: none;
+}
+.ridvan-desktop-menus {
+    display: flex;
+}
+
+/* Mobile Breakpoint */
+@media ( max-width: @max-width-breakpoint-tablet ) {
+    
+    /* Flip visibility */
+    .ridvan-mobile-menus {
+        display: flex;
+        gap: 10px; /* Space between Menu / Tools / Links */
+    }
+    
+    .ridvan-desktop-menus {
+        display: none;
+    }
+
+    /* Ensure the label looks like a button */
+    .ridvan-mobile-menus .mw-checkbox-hack-button {
+        width: auto; 
+        padding: 5px 10px;
+        background: #eee;
+        border-radius: 4px;
+        text-indent: 0; /* Reset the icon-only indent if inherited */
+        color: black;
+        font-size: 0.9rem;
     }
 }
