--- a/resources/Header.less
+++ b/resources/Header.less
@@ -211,6 +211,7 @@
     .ridvan-mobile-dropdown li {
         display: block;
         margin: 0;
+        padding: 0px 0px 0px 20px;
     }
 
     .ridvan-mobile-dropdown li a {
