--- a/resources/common.less
+++ b/resources/common.less
@@ -87,5 +87,9 @@ body {
 		background: @background-color-article;
 		padding: 5px 30px;
 		margin-right: 23px;
+
+		/* MOBILE OVERRIDE */
+		@media (max-width: @max-width-breakpoint-tablet) {
+			margin-right: 0;
 	}
 }
