--- a/templates/Header.mustache
+++ b/templates/Header.mustache
@@ -44,9 +44,10 @@
             {{>ContentEdit}}
             {{>ContentTalk}}
             {{>Notifications}}
-            {{>Dropdown}}{{>ContentHybrid}}
-            {{>Dropdown}}{{>PersonalMenu}}
+            <div class="ridvan-dropdown-wrapper">
+                {{>Dropdown}}{{>ContentHybrid}}
+                {{>Dropdown}}{{>PersonalMenu}}
+            </div>
         </div>
-
     </div>
 </header>
