--- a/resources/skin.less
+++ b/resources/skin.less
@@ -9,6 +9,7 @@
 @media screen {
 	@import 'Portlet.less';
 	@import 'Header.less';
+	@import 'ContentHybrid.less';
 	@import 'Dropdown.less';
 	@import 'Notifications.less';
 	@import 'PersonalMenu.less';
