--- a/resources/Header.less
+++ b/resources/Header.less
@@ -130,6 +130,7 @@
 
     /* RESET BUTTON STYLES FOR MOBILE TEXT MENUS */
     .ridvan-mobile-dropdown .mw-checkbox-hack-button {
+        display: inline-block;
         width: auto;
         height: auto;
         padding: 0;
