--- a/resources/Header.less
+++ b/resources/Header.less
@@ -80,8 +80,6 @@
     z-index: 10;
     vertical-align: middle;     
     background-color: #385b82; 
-    margin: 0px 4px;
-    cursor: pointer;
 
     /* Mask settings */
     -webkit-mask-repeat: no-repeat;
@@ -91,6 +89,10 @@
     -webkit-mask-size: contain;
     mask-size: contain;
 
+    margin: 0px 4px 0px 4px;
+    cursor: pointer;
+
+    /* HOVER: using @color-link since @color-primary does not exist */
     &:hover {
         background-color: @color-link; 
     }
@@ -104,7 +106,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 11;
+    z-index: 11; /* Sit on top of the container */
 }
 
 /* Edit Icon */
@@ -121,86 +123,98 @@
 
 /* More Dropdown Icon */
 .mw-checkbox-hack-button {
+    background-color: 385b82; 
+    
     -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' stroke='%23355B84'%3E%3Cpath d='M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z'/%3E%3C/svg%3E");
     mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' stroke='%23355B84'%3E%3Cpath d='M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z'/%3E%3C/svg%3E");
+    
+    &:hover {
+        background-color: @color-link;
+    }
 }
 
 /* --- MOBILE DROPDOWN STYLING --- */
 @media ( max-width: @max-width-breakpoint-tablet ) {
 
-    /* RESET BUTTON STYLES FOR MOBILE TEXT MENUS */
+    /* 1. RESET BUTTON STYLES FOR MOBILE TEXT MENUS */
+    /* We specifically target the dropdowns inside ridvan-mobile-dropdown to override the 20px icon defaults */
     .ridvan-mobile-dropdown .mw-checkbox-hack-button {
-        display: inline-block;
         width: auto;
         height: auto;
         padding: 0;
         margin: 0;
-        background: transparent;
+        background: transparent; /* Remove the blue box */
         border: none;
         color: @color-base;
         font-size: 1rem;
         font-weight: normal;
-        text-indent: 0;
+        text-indent: 0; /* Show the text */
+        mask-image: none; /* Remove the icon mask */
         -webkit-mask-image: none;
-        mask-image: none;
+        display: inline-block;
         cursor: pointer;
-
-        &:hover {
-            color: @color-link;
-            background: transparent;
-        }
     }
 
-    /* DROPDOWN MECHANISM */
+    /* Hover state for text links */
+    .ridvan-mobile-dropdown .mw-checkbox-hack-button:hover {
+        color: @color-link;
+        background: transparent;
+    }
+
+    /* 2. DROPDOWN MECHANISM */
     .ridvan-mobile-dropdown {
         position: relative;
+    }
 
-        input {
-            display: none;
-        }
+    /* Hide the checkbox input */
+    .ridvan-mobile-dropdown input {
+        display: none;
+    }
 
-        .mw-portlet-body {
-            display: none;
-            position: absolute;
-            left: 0;
-            top: 100%;
-            z-index: 100;
-            background: #ffffff;
-            border: 1px solid #a2a9b1;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-            min-width: 180px;
-            padding: 5px 0;
-            margin-top: 5px;
-        }
+    /* Hide the menu body by default */
+    /* Styled simply: White box, grey border, shadow */
+    .ridvan-mobile-dropdown .mw-portlet-body {
+        display: none;
+        position: absolute;
+        left: 0; /* Align left edge with text label */
+        top: 100%;
+        z-index: 100;
+        background: #ffffff;
+        border: 1px solid #a2a9b1;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+        min-width: 180px;
+        padding: 5px 0;
+        margin-top: 5px;
+    }
 
-        input:checked ~ .mw-portlet-body {
-            display: block;
-        }
+    /* Show the menu body when checkbox is checked */
+    .ridvan-mobile-dropdown input:checked ~ .mw-portlet-body {
+        display: block;
+    }
 
-        /* LIST STYLING */
-        ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-        
-        li {
-            display: block;
-            margin: 0;
-            padding: 0px 0px 0px 20px;
+    /* 3. LIST STYLING INSIDE DROPDOWN */
+    .ridvan-mobile-dropdown ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+    
+    .ridvan-mobile-dropdown li {
+        display: block;
+        margin: 0;
+        padding: 0px 0px 0px 20px;
+    }
 
-            a {
-                display: block;
-                padding: 8px 15px;
-                color: #0645ad;
-                text-decoration: none;
-                font-size: 0.95em;
+    .ridvan-mobile-dropdown li a {
+        display: block;
+        padding: 8px 15px;
+        color: #0645ad;
+        text-decoration: none;
+        font-size: 0.95em;
+    }
 
-                &:hover {
-                    background-color: #eaecf0;
-                    text-decoration: none;
-                }
-            }
-        }
+    .ridvan-mobile-dropdown li a:hover {
+        background-color: #eaecf0;
+        text-decoration: none;
     }
 }
