--- a/resources/Dropdown.less
+++ b/resources/Dropdown.less
@@ -12,6 +12,8 @@
 
 	.mw-portlet-body {
 		display: none;
+		width: max-content;
+		min-width: 200px;
 
 		ul {
 			background: @background-color-article;
@@ -24,6 +26,9 @@
 			margin-top: 6px;
 			padding: 10px 0px;
 		}
+		li {
+            white-space: nowrap; 
+        }
 	}
 
 	input:checked {
