--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -2,5 +2,7 @@
 {{>Notices}}
 {{>Sidebar}}
 {{>Content}}
-{{>CategoryPortlet}}
+{{#data-portlets}}
+    {{>CategoryPortlet}}
+{{/data-portlets}}
 {{>Footer}}
