--- a/resources/Content.less
+++ b/resources/Content.less
@@ -77,17 +77,18 @@
     grid-area: categories;
     
     /* Match the spacing of your <main> content area so it aligns visually */
-    margin-right: 23px; 
-    margin-left: 30px; 
-    margin-top: 1em;
-    padding: 10px;
-    
-    /* Optional: Visual separation */
-    background-color: #f8f9fa; 
-    border: 1px solid #c8ccd1;
+	box-shadow: 4px 3px 7px 3px rgba(0, 0, 0, 0.1);
+    border: solid #eaecf0;
+    border-width: 1px 1px 0.2em;
+    background: #ffffff;
+    padding: 0em 2em 1em;
+	margin-top: 1em;
+    margin-bottom: 1em;
+    margin-right: 23px;
+    overflow: auto;
+    word-wrap: break-word;
 
     @media (max-width: @max-width-breakpoint-tablet) {
         margin-right: 0;
-        margin-left: 0;
     }
 }
