--- a/resources/common.less
+++ b/resources/common.less
@@ -42,7 +42,8 @@ body {
         grid-template-areas: 
             "header header"
             "sidebar content"
-			"sidebar categories";
+			"sidebar categories"
+			"footer footer";
 
         /* MOBILE OVERRIDE */
         @media (max-width: @max-width-breakpoint-tablet) {
@@ -50,7 +51,8 @@ body {
             grid-template-areas: 
                 "header"
                 "content"
-				"categories";
+				"categories"
+				"footer";
         }
     }
 
