--- a/resources/Icons.less
+++ b/resources/Icons.less
@@ -30,7 +30,8 @@
 */
 #p-personal li a,
 .ridvan-mobile-dropdown li a,
-.ridvan-sidebar #p-tb li a {
+.ridvan-sidebar #p-tb li a,
+#p-hybrid li a, {
     &::before {
         content: '';
         display: inline-block;
